<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">


	<modelVersion>4.0.0</modelVersion>
	<groupId>de.dralle.antlr-server</groupId>
	<artifactId>backend</artifactId>
	<packaging>jar</packaging>
	<name>antlr-server-backend</name>
	<version>0.0.1-SNAPSHOT</version>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>remove-generated-mvn-properties</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
						<configuration>
							<filesets>
								<fileset>
									<directory>${project.mainResourceFolder}</directory>
									<includes>
										<include>
											${maven.properties.out.file.name}</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.3.0</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<goals>
							<goal>write-project-properties</goal>
						</goals>
						<configuration>
							<outputFile>${maven.properties.file.out.fullPath}</outputFile>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
			</plugin>
			<!-- Build executable jar. Executable will be under target/ and have
			suffix 
				'-shaded' -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<shadedArtifactAttached>true</shadedArtifactAttached> <!--
							Add all dependencies -->
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>de.dralle.asb.Main</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>io.javalin</groupId>
			<artifactId>javalin</artifactId>
			<version>${javalin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${sl4j.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${commonscli.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- ANTLR (for building grandmas)-->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>${antlr.version}</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>${antlr.version}</version>
		</dependency>
		<dependency>
			<groupId>guru.nidi</groupId>
			<artifactId>graphviz-java</artifactId>
			<version>${graphviz.version}</version>
		</dependency>
	</dependencies>
	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<junit.jupiter.version>6.0.3</junit.jupiter.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.mainResourceFolder>src/main/resources</project.mainResourceFolder>
		<maven.properties.file.out.name>maven.properties</maven.properties.file.out.name>
		<maven.properties.file.out.fullPath>
			${project.mainResourceFolder}/${maven.properties.file.out.name}</maven.properties.file.out.fullPath>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.version>${project.version}</project.version>
		<antlr.version>4.13.2</antlr.version>
		<jackson.version>2.15.0</jackson.version>
		<graphviz.version>0.18.0</graphviz.version>
		<commonscli.version>1.7.0</commonscli.version>
		<sl4j.version>2.0.0</sl4j.version>
		<javalin.version>6.0.0</javalin.version>
		<project.build.timestamp>${maven.build.timestamp}</project.build.timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH.mm.ss Z</maven.build.timestamp.format>
		<project.build.system>Maven</project.build.system>
		<project.build.type>Manual</project.build.type>
		<project.build.commit></project.build.commit>
		<project.repository>https://github.com/nils91/som</project.repository>
	</properties>
</project>